fix jumps and added best practices

--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -1,8 +1,13 @@
 @use "../base/variables.scss" as *;
 
+@mixin button-border ($border:2px,$color: transparent) {
+  border: $border solid;
+  border-color: $color;
+}
+
 @mixin button-base($border: 2px, $padding: 10px 24px) {
   opacity: 1;
-  border: $border transparent;
+  @include button-border($border,transparent );
   padding: $space-2s $space-lg;
   color: $primary;
   text-decoration: none;
@@ -11,13 +16,13 @@
 
 @mixin button-primary($border: 2px) {
   background-color: $marina800;
-  border: $border solid;
-  border-color: $marina800;
+  @include button-border($border,$marina800);
 }
+
 @mixin button-primary-style {
   &:hover {
     background-color: $marina600;
-    border: $marina600;
+    border-color: $marina600;
   }
 
   &:focus {
@@ -32,13 +37,13 @@
 
   &:disabled {
     background-color: $alternative3;
+    cursor: not-allowed;
   }
 }
 
 @mixin button-secondary($border: 2px) {
   background-color: transparent;
-  border: $border solid;
-  border-color: $separatorbold;
+  @include button-border($border,$separatorbold);
 }
 
 @mixin button-secondary-style {
@@ -58,19 +63,18 @@
 
   &:disabled {
     background-color: $separatorbold;
-    border: 2px $disabled;
+    border-color: $disabled;
+    cursor: not-allowed;
   }
 }
 @mixin button-tertiary($border: 2px, $padding: 8px 20px) {
-  border: $border solid;
-  border-color: $separatorbold;
+  @include button-border($border,$separatorbold);
   padding: $space-s $space-m;
   color: $primary;
 }
 
 @mixin blog__cta-link($border: 2px, $padding: 8px 20px) {
-  border: $border;
-  border-color: $separatorbold;
+  @include button-border($border,$separatorbold);
   padding: $space-s $space-m;
   color: $primary;
 }
@@ -96,5 +100,6 @@
 
   &:disabled {
     color: $disabled;
+    cursor: not-allowed;
   }
 }
